<resources>
    <!-- 앱 이름 -->
    <string name="app_name">숨고</string>

    <!-- MainActivity 버튼 -->
    <string name="btn_user_login">사용자로 시작하기</string>
    <string name="btn_expert_login">고수로 시작하기</string>

    <!-- UserLoginActivity 관련 -->
    <string name="user_login_title">사용자 로그인</string>
    <string name="hint_user_id">아이디를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>
    <string name="btn_login">로그인</string>
    <string name="go_to_register">아직 회원이 아니신가요? 회원가입</string>

    <!-- UserRegister.xml -->

    <string name="user_register_title">회원가입</string>
    <!--<string name="hint_user_id">아이디를 입력하세요</string>
    <string name="hint_password">비밀번호를 입력하세요</string>-->
    <string name="hint_name">이름을 입력하세요</string>
    <string name="hint_phone">전화번호를 입력하세요</string>
    <string name="btn_register">회원가입</string>
    <string name="a11y_send">전송</string>


</resources>
